fixed bad centering on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -161,10 +161,6 @@ header {
 	padding-top: .5em;
 }
 
-#logo h1 img {
-	display: block;
-}
-
 #logo h2 {
  	display: block;
 	text-align: center;
